--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -96,7 +96,7 @@
                 and
                 <a
                   class="projectName"
-                  href="/EXP1/sorted?id=1&field=std_fname"
+                  href="/EXP1/sorted?id=1&field=std_id"
                   target="_blank"
                   >Sorted Grid</a
                 ><br />
