--- a/views/pages/ExpressTasks/EXP7_job_application/display.ejs
+++ b/views/pages/ExpressTasks/EXP7_job_application/display.ejs
@@ -23,9 +23,7 @@
             <td class="data-td head-td"><%=element.last_name%></td>
             <td class="data-td head-td"><%=element.dob%></td>
             <td class="data-td head-td">
-              <a
-                href="http://localhost:8007/EXP7/updateform?id=<%=element.id%>"
-                target="_blank"
+              <a href="/EXP7/updateform?id=<%=element.id%>" target="_blank"
                 >Update
               </a>
             </td>
