--- a/views/pages/ExpressTasks/EXP7_job_application/index.ejs
+++ b/views/pages/ExpressTasks/EXP7_job_application/index.ejs
@@ -95,6 +95,6 @@
     </section>
     <footer><center>Abhishek Verma</center></footer>
 
-    <script src="/script/EXP7_job.js"></script>
+    <script src="/script/EXP7_job_application.js"></script>
   </body>
 </html>
