--- a/views/pages/ExpressTasks/EXP3_query_search/table.ejs
+++ b/views/pages/ExpressTasks/EXP3_query_search/table.ejs
@@ -20,18 +20,7 @@
             </div>
           </form>
         </div>
-
-        <table>
-          <%try{%>
-          <tr>
-            <th><%=heading%></th>
-          </tr>
-          <%tables.forEach((element) => {%>
-          <tr>
-            <td><%=Object.values(element)[0]%></td>
-          </tr>
-          <%});%> <%} catch (error) {}%>
-        </table>
+        <h2><center>Table : std_master</center></h2>
         <%try {%>
 
         <div class="navigation">
