--- a/views/partials/EXP7_job_application/basic_details.ejs
+++ b/views/partials/EXP7_job_application/basic_details.ejs
@@ -105,7 +105,7 @@
           <select name="states" id="states" onchange="selectedState(this)">
             <option>Select State</option>
           </select>
-          <span class="error"><p id="state_error"></p></span>
+          <span class="error"><p id="states_error"></p></span>
         </td>
         <td>
           <label for="city">City:</label>
