--- a/views/partials/EXP7_job_application/language.ejs
+++ b/views/partials/EXP7_job_application/language.ejs
@@ -17,6 +17,7 @@
         name="hindi_efficiency[]"
         id="hindiRead"
         value="Read"
+        class="disabledClass"
         disabled
       />
       <label for="hindiRead">read</label>
@@ -25,6 +26,7 @@
         name="hindi_efficiency[]"
         id="hindiWrite"
         value="Speak"
+        class="disabledClass"
         disabled
       />
       <label for="hindiWrite">speak</label>
@@ -33,6 +35,7 @@
         name="hindi_efficiency[]"
         id="hindiSpeak"
         value="Write"
+        class="disabledClass"
         disabled
       />
       <label for="hindiSpeak">write</label>
@@ -52,6 +55,7 @@
         name="english_efficiency[]"
         id="englishRead"
         value="Read"
+        class="disabledClass"
         disabled
       />
       <label for="englishRead">read</label>
@@ -60,6 +64,7 @@
         name="english_efficiency[]"
         id="englishWrite"
         value="Speak"
+        class="disabledClass"
         disabled
       />
       <label for="englishWrite">speak</label>
@@ -68,6 +73,7 @@
         name="english_efficiency[]"
         id="englishSpeak"
         value="Write"
+        class="disabledClass"
         disabled
       />
       <label for="englishSpeak">write</label>
@@ -87,6 +93,7 @@
         name="gujarati_efficiency[]"
         id="gujaratiRead"
         value="Read"
+        class="disabledClass"
         disabled
       />
       <label for="gujaratiRead">read</label>
@@ -95,6 +102,7 @@
         name="gujarati_efficiency[]"
         id="gujaratiWrite"
         value="Speak"
+        class="disabledClass"
         disabled
       />
       <label for="gujaratiWrite">speak</label>
@@ -103,6 +111,7 @@
         name="gujarati_efficiency[]"
         id="gujaratiSpeak"
         value="Write"
+        class="disabledClass"
         disabled
       />
       <label for="gujaratiSpeak">write</label>
