--- a/views/partials/EXP7_job_application/reference.ejs
+++ b/views/partials/EXP7_job_application/reference.ejs
@@ -15,12 +15,24 @@
 
           <td><label for="refcontact">Contact:</label></td>
           <td>
-            <input type="text" name="refcontact" id="ref1contact" disabled />
+            <input
+              type="text"
+              name="refcontact"
+              id="ref1contact"
+              class="disabledClass"
+              disabled
+            />
             <span class="error"><p id="ref1contact_error"></p></span>
           </td>
           <td><label for="refrelation">Relation:</label></td>
           <td>
-            <input type="text" name="refrelation" id="ref1relation" disabled />
+            <input
+              type="text"
+              name="refrelation"
+              id="ref1relation"
+              class="disabledClass"
+              disabled
+            />
             <span class="error"><p id="ref1relation_error"></p></span>
           </td>
         </tr>
@@ -33,12 +45,24 @@
 
           <td><label for="refcontact">Contact:</label></td>
           <td>
-            <input type="text" name="refcontact" id="ref2contact" disabled />
+            <input
+              type="text"
+              name="refcontact"
+              id="ref2contact"
+              class="disabledClass"
+              disabled
+            />
             <span class="error"><p id="ref2contact_error"></p></span>
           </td>
           <td><label for="refrelation">Relation:</label></td>
           <td>
-            <input type="text" name="refrelation" id="ref2relation" disabled />
+            <input
+              type="text"
+              name="refrelation"
+              id="ref2relation"
+              class="disabledClass"
+              disabled
+            />
             <span class="error"><p id="ref2relation_error"></p></span>
           </td>
         </tr>
