--- a/views/partials/EXP7_job_application/work_exp.ejs
+++ b/views/partials/EXP7_job_application/work_exp.ejs
@@ -24,6 +24,7 @@
               type="text"
               name="companydesignation"
               id="company1designation"
+              class="disabledClass"
               disabled
             />
             <span class="error"><p id="company1designation_error"></p></span>
@@ -36,6 +37,7 @@
               name="companyfrom"
               id="company1from"
               placeholder="dd-mm-yyyy"
+              class="disabledClass"
               disabled
             />
             <span class="error"><p id="company1from_error"></p></span>
@@ -47,6 +49,7 @@
               name="companyto"
               id="company1to"
               placeholder="dd-mm-yyyy"
+              class="disabledClass"
               disabled
             />
             <span class="error"><p id="company1to_error"></p></span>
@@ -69,6 +72,7 @@
               type="text"
               name="companydesignation"
               id="company2designation"
+              class="disabledClass"
               disabled
             />
             <span class="error"><p id="company2designation_error"></p></span>
@@ -81,6 +85,7 @@
               name="companyfrom"
               id="company2from"
               placeholder="dd-mm-yyyy"
+              class="disabledClass"
               disabled
             />
             <span class="error"><p id="company2from_error"></p></span>
@@ -92,6 +97,7 @@
               name="companyto"
               id="company2to"
               placeholder="dd-mm-yyyy"
+              class="disabledClass"
               disabled
             />
             <span class="error"><p id="company2to_error"></p></span>
