--- a/views/partials/EXP7_job_application/technology.ejs
+++ b/views/partials/EXP7_job_application/technology.ejs
@@ -17,6 +17,7 @@
         name="php"
         id="phpBeginner"
         value="Beginner"
+        class="disabledClass"
         disabled
       />
       <label for="phpBeginner">Beginner</label>
@@ -25,10 +26,18 @@
         name="php"
         id="phpMediator"
         value="Mediator"
+        class="disabledClass"
         disabled
       />
       <label for="phpMediator">Mediator</label>
-      <input type="radio" name="php" id="phpExpert" value="Expert" disabled />
+      <input
+        type="radio"
+        name="php"
+        id="phpExpert"
+        value="Expert"
+        class="disabledClass"
+        disabled
+      />
       <label for="phpExpert">Expert</label>
     </div>
     <hr />
@@ -46,6 +55,7 @@
         name="MySql"
         id="MySqlBeginner"
         value="Beginner"
+        class="disabledClass"
         disabled
       />
       <label for="MySqlBeginner">Beginner</label>
@@ -54,6 +64,7 @@
         name="MySql"
         id="MySqlMediator"
         value="Mediator"
+        class="disabledClass"
         disabled
       />
       <label for="MySqlMediator">Mediator</label>
@@ -62,6 +73,7 @@
         name="MySql"
         id="MySqlExpert"
         value="Expert"
+        class="disabledClass"
         disabled
       />
       <label for="MySqlExpert">Expert</label>
@@ -81,6 +93,7 @@
         name="oracle"
         id="oracleBeginner"
         value="Beginner"
+        class="disabledClass"
         disabled
       />
       <label for="oracleBeginner">Beginner</label>
@@ -89,6 +102,7 @@
         name="oracle"
         id="oracleMediator"
         value="Mediator"
+        class="disabledClass"
         disabled
       />
       <label for="oracleMediator">Mediator</label>
@@ -97,6 +111,7 @@
         name="oracle"
         id="oracleExpert"
         value="Expert"
+        class="disabledClass"
         disabled
       />
       <label for="oracleExpert">Expert</label>
@@ -116,6 +131,7 @@
         name="laravel"
         id="laravelBeginner"
         value="Beginner"
+        class="disabledClass"
         disabled
       />
       <label for="laravelBeginner">Beginner</label>
@@ -124,6 +140,7 @@
         name="laravel"
         id="laravelMediator"
         value="Mediator"
+        class="disabledClass"
         disabled
       />
       <label for="laravelMediator">Mediator</label>
@@ -132,6 +149,7 @@
         name="laravel"
         id="laravelExpert"
         value="Expert"
+        class="disabledClass"
         disabled
       />
 
