job app validations improved

--- a/views/pages/registration/index.ejs
+++ b/views/pages/registration/index.ejs
@@ -54,6 +54,7 @@
         </form>
       </div>
     </div>
-    <script src="script/registration.js"></script>
+    <script src="script/registration/registration.js"></script>
+    <script src="script/registration/validation.js"></script>
   </body>
 </html>
