--- a/views/pages/registration/password.ejs
+++ b/views/pages/registration/password.ejs
@@ -30,13 +30,13 @@
               >Passwords do not match</span
             >
           </div>
-
           <div class="ip-fields" id="submit-div">
             <input type="submit" value="Submit" id="submit" />
           </div>
         </form>
       </div>
     </div>
-    <script src="script/registration.js"></script>
+    <script src="script/registration/registration.js"></script>
+    <script src="script/registration/validation.js"></script>
   </body>
 </html>
