--- a/views/partials/EXP7_job_application/education.ejs
+++ b/views/partials/EXP7_job_application/education.ejs
@@ -11,20 +11,17 @@
         </td>
         <td><label for="boardname">Name of board:</label></td>
         <td>
-          <input
-            type="text"
-            name="boardname"
-            id="ssc"
-            onkeyup="enableEdu(this)"
-          />
+          <input type="text" name="boardname" id="ssc" />
 
-          <span class="error"><p id="ssc_error"></p></span>
+          <span class="error" id="ssc_error">Enter board name</span>
         </td>
         <td><label for="passingyear">Passing year:</label></td>
         <td>
           <input type="text" name="passingyear" id="passingyearssc" />
 
-          <span class="error"><p id="passingyearssc_error"></p></span>
+          <span class="error" id="passingyearssc_error"
+            >Enter passing year</span
+          >
         </td>
         <td>
           <label for="passingpercentage">Passing percentage:</label>
@@ -38,7 +35,9 @@
             min="30"
           />
 
-          <span class="error"><p id="passingpercentagessc_error"></p></span>
+          <span class="error" id="passingpercentagessc_error"
+            >Enter percentage</span
+          >
         </td>
       </table>
     </div>
@@ -51,20 +50,17 @@
         <td><label for="boardname">Name of board:</label></td>
 
         <td>
-          <input
-            type="text"
-            name="boardname"
-            id="hsc"
-            onkeyup="enableEdu(this)"
-          />
+          <input type="text" name="boardname" id="hsc" />
 
-          <span class="error"><p id="hsc_error"></p></span>
+          <span class="error" id="hsc_error">Enter board name</span>
         </td>
         <td><label for="passingyear">Passing year:</label></td>
         <td>
           <input type="text" name="passingyear" id="passingyearhsc" />
 
-          <span class="error"><p id="passingyearhsc_error"></p></span>
+          <span class="error" id="passingyearhsc_error"
+            >Enter passing year</span
+          >
         </td>
         <td>
           <label for="passingpercentage">Passing percentage:</label>
@@ -78,7 +74,9 @@
             min="30"
           />
 
-          <span class="error"><p id="passingpercentagehsc_error"></p></span>
+          <span class="error" id="passingpercentagehsc_error"
+            >Enter passing percentage</span
+          >
         </td>
       </table>
     </div>
@@ -92,20 +90,17 @@
           <label for="boardname">Name of Board:</label>
         </td>
         <td>
-          <input
-            type="text"
-            name="boardname"
-            id="bachelor"
-            onkeyup="enableEdu(this)"
-          />
+          <input type="text" name="boardname" id="bachelor" />
 
-          <span class="error"><p id="bachelor_error"></p></span>
+          <span class="error" id="bachelor_error">Enter board</span>
         </td>
         <td><label for="passingyear">Passing year:</label></td>
         <td>
           <input type="text" name="passingyear" id="passingyearbachelor" />
 
-          <span class="error"><p id="passingyearbachelor_error"></p></span>
+          <span class="error" id="passingyearbachelor_error"
+            >Enter passing year</span
+          >
         </td>
         <td>
           <label for="passingpercentage">Passing percentage:</label>
@@ -119,9 +114,9 @@
             min="30"
           />
 
-          <span class="error"
-            ><p id="passingpercentagebachelor_error"></p
-          ></span>
+          <span class="error" id="passingpercentagebachelor_error"
+            >Enter passing percentage</span
+          >
         </td>
       </table>
     </div>
@@ -135,20 +130,17 @@
           <label for="boardname">Name of Board:</label>
         </td>
         <td>
-          <input
-            type="text"
-            name="boardname"
-            id="master"
-            onkeyup="enableEdu(this)"
-          />
+          <input type="text" name="boardname" id="master" />
 
-          <span class="error"><p id="master_error"></p></span>
+          <span class="error" id="master_error">Enter board name</span>
         </td>
         <td><label for="passingyear">Passing year:</label></td>
         <td>
           <input type="text" name="passingyear" id="passingyearmaster" />
 
-          <span class="error"><p id="passingyearmaster_error"></p></span>
+          <span class="error" id="passingyearmaster_error"
+            >Enter passing year</span
+          >
         </td>
         <td>
           <label for="passingpercentage">Passing percentage:</label>
@@ -162,7 +154,9 @@
             min="30"
           />
 
-          <span class="error"><p id="passingpercentagemaster_error"></p></span>
+          <span class="error" id="passingpercentagemaster_error"
+            >Enter passing percentage</span
+          >
         </td>
       </table>
     </div>
