--- a/views/partials/EXP7_job_application/reference.ejs
+++ b/views/partials/EXP7_job_application/reference.ejs
@@ -22,7 +22,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="ref1contact_error"></p></span>
+            <span class="error" id="ref1contact_error">Enter contact</span>
           </td>
           <td><label for="refrelation">Relation:</label></td>
           <td>
@@ -33,7 +33,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="ref1relation_error"></p></span>
+            <span class="error" id="ref1relation_error">Enter Relation</span>
           </td>
         </tr>
         <tr id="ref2">
@@ -52,7 +52,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="ref2contact_error"></p></span>
+            <span class="error" id="ref2contact_error">Enter Contact</span>
           </td>
           <td><label for="refrelation">Relation:</label></td>
           <td>
@@ -63,7 +63,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="ref2relation_error"></p></span>
+            <span class="error" id="ref2relation_error">Enter relation</span>
           </td>
         </tr>
       </table>
