--- a/views/partials/EXP7_job_application/work_exp.ejs
+++ b/views/partials/EXP7_job_application/work_exp.ejs
@@ -27,7 +27,9 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="company1designation_error"></p></span>
+            <span class="error" id="company1designation_error"
+              >Enter designation</span
+            >
           </td>
           <td><label for="companyfrom">From:</label></td>
 
@@ -40,7 +42,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="company1from_error"></p></span>
+            <span class="error" id="company1from_error">Enter date</span>
           </td>
           <td><label for="companyto">To:</label></td>
           <td>
@@ -52,7 +54,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="company1to_error"></p></span>
+            <span class="error" id="company1to_error">Enter date</span>
           </td>
         </tr>
         <tr id="comp2">
@@ -75,7 +77,9 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="company2designation_error"></p></span>
+            <span class="error" id="company2designation_error"
+              >Enter designation</span
+            >
           </td>
           <td><label for="companyfrom">From:</label></td>
 
@@ -88,7 +92,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="company2from_error"></p></span>
+            <span class="error" id="company2from_error">Enter date</span>
           </td>
           <td><label for="companyto">To:</label></td>
           <td>
@@ -100,7 +104,7 @@
               class="disabledClass"
               disabled
             />
-            <span class="error"><p id="company2to_error"></p></span>
+            <span class="error" id="company2to_error">Enter date</span>
           </td>
         </tr>
       </table>
