--- a/views/pages/registration/forgotPassword.ejs
+++ b/views/pages/registration/forgotPassword.ejs
@@ -25,6 +25,8 @@
         </form>
       </div>
     </div>
-    <script src="script/registration.js"></script>
+    <script src="script/registration/registration.js"></script>
+    <script src="script/registration/validation.js"></script>
+    
   </body>
 </html>
