--- a/views/pages/registration/login.ejs
+++ b/views/pages/registration/login.ejs
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
-    <script src="script/registration.js"></script>
+    <script src="script/registration/registration.js"></script>
+    <script src="script/registration/validation.js"></script>
   </body>
 </html>
